@@ -1,7 +1,16 @@
+/*
+ * Microsoft JDBC Driver for SQL Server
+ *
+ * Copyright(c) Microsoft Corporation All rights reserved.
+ *
+ * This program is made available under the terms of the MIT License. See the LICENSE file in the project root for more information.
+ */
+
 package com.microsoft.sqlserver.testframework.util;
 
 import java.math.BigDecimal;
 import java.math.BigInteger;
+import java.math.RoundingMode;
 import java.sql.Date;
 import java.sql.Time;
 import java.sql.Timestamp;
@@ -168,7 +177,7 @@ public class RandomData {
             if (r.nextBoolean()) {
                 n = BigInteger.TEN.pow(precision);
                 if (scale > 0)
-                    return new BigDecimal(n, scale).subtract(new BigDecimal("" + Math.pow(10, -scale)).setScale(scale, BigDecimal.ROUND_HALF_UP))
+                    return new BigDecimal(n, scale).subtract(new BigDecimal("" + Math.pow(10, -scale)).setScale(scale, RoundingMode.HALF_UP))
                             .negate();
                 else
                     return new BigDecimal(n, scale).subtract(new BigDecimal("1")).negate();
@@ -176,7 +185,7 @@ public class RandomData {
             else {
                 n = BigInteger.TEN.pow(precision);
                 if (scale > 0)
-                    return new BigDecimal(n, scale).subtract(new BigDecimal("" + Math.pow(10, -scale)).setScale(scale, BigDecimal.ROUND_HALF_UP))
+                    return new BigDecimal(n, scale).subtract(new BigDecimal("" + Math.pow(10, -scale)).setScale(scale, RoundingMode.HALF_UP))
                             .negate();
                 else
                     return new BigDecimal(n, scale).subtract(new BigDecimal("1")).negate();
@@ -226,7 +235,7 @@ public class RandomData {
         }
 
         if (returnZero) {
-            return new Double(0);
+            return Double.valueOf(0);
         }
 
         // only 2 options: 24 or 53
